Fixed white space below footer

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -11,7 +11,6 @@ body {
     font-size: 2rem;
     font-family: "Cormorant Garamond", Arial, Helvetica, sans-serif;
     color: #284B63;
-    min-height: 100vh;
 }
 
 input,
@@ -598,6 +597,7 @@ color: #284B63;
 @media (min-width: 768px) {
     .container {
         width: 90% !important;
+        margin: 0 auto;
     }
 
     .logo {
